PROJECT=cocoa-sharp
VERSION=0.1

lib_LTLIBRARIES=libFoundationGlue.la
libFoundationGlue_la_SOURCES =				\
	 NSAppleEventDescriptor_stub.m \
	 NSAppleEventManager_stub.m \
	 NSAppleScript_stub.m \
	 NSArchiver_stub.m \
	 NSArray_stub.m \
	 NSAttributedString_stub.m \
	 NSAutoreleasePool_stub.m \
	 NSBundle_stub.m \
	 NSByteOrder_stub.m \
	 NSCalendarDate_stub.m \
	 NSCharacterSet_stub.m \
	 NSClassDescription_stub.m \
	 NSCoder_stub.m \
	 NSCompatibility_stub.m \
	 NSConnection_stub.m \
	 NSData_stub.m \
	 NSDateFormatter_stub.m \
	 NSDate_stub.m \
	 NSDebug_stub.m \
	 NSDecimalNumber_stub.m \
	 NSDecimal_stub.m \
	 NSDictionary_stub.m \
	 NSDistantObject_stub.m \
	 NSDistributedLock_stub.m \
	 NSDistributedNotificationCenter_stub.m \
	 NSEnumerator_stub.m \
	 NSError_stub.m \
	 NSException_stub.m \
	 NSFileHandle_stub.m \
	 NSFileManager_stub.m \
	 NSFormatter_stub.m \
	 NSGeometry_stub.m \
	 NSHFSFileTypes_stub.m \
	 NSHTTPCookieStorage_stub.m \
	 NSHTTPCookie_stub.m \
	 NSHashTable_stub.m \
	 NSHost_stub.m \
	 NSIndexSet_stub.m \
	 NSInvocation_stub.m \
	 NSJavaSetup_stub.m \
	 NSKeyValueCoding_stub.m \
	 NSKeyValueObserving_stub.m \
	 NSKeyedArchiver_stub.m \
	 NSLock_stub.m \
	 NSMapTable_stub.m \
	 NSMethodSignature_stub.m \
	 NSNetServices_stub.m \
	 NSNotificationQueue_stub.m \
	 NSNotification_stub.m \
	 NSNull_stub.m \
	 NSNumberFormatter_stub.m \
	 NSObjCRuntime_stub.m \
	 NSObjectScripting_stub.m \
	 NSObject_stub.m \
	 NSPathUtilities_stub.m \
	 NSPortCoder_stub.m \
	 NSPortMessage_stub.m \
	 NSPortNameServer_stub.m \
	 NSPort_stub.m \
	 NSProcessInfo_stub.m \
	 NSPropertyList_stub.m \
	 NSProtocolChecker_stub.m \
	 NSProxy_stub.m \
	 NSRange_stub.m \
	 NSRunLoop_stub.m \
	 NSScanner_stub.m \
	 NSScriptClassDescription_stub.m \
	 NSScriptCoercionHandler_stub.m \
	 NSScriptCommandDescription_stub.m \
	 NSScriptCommand_stub.m \
	 NSScriptExecutionContext_stub.m \
	 NSScriptKeyValueCoding_stub.m \
	 NSScriptObjectSpecifiers_stub.m \
	 NSScriptStandardSuiteCommands_stub.m \
	 NSScriptSuiteRegistry_stub.m \
	 NSScriptWhoseTests_stub.m \
	 NSSerialization_stub.m \
	 NSSet_stub.m \
	 NSSortDescriptor_stub.m \
	 NSSpellServer_stub.m \
	 NSStream_stub.m \
	 NSString_stub.m \
	 NSTask_stub.m \
	 NSThread_stub.m \
	 NSTimeZone_stub.m \
	 NSTimer_stub.m \
	 NSURLAuthenticationChallenge_stub.m \
	 NSURLCache_stub.m \
	 NSURLConnection_stub.m \
	 NSURLCredentialStorage_stub.m \
	 NSURLCredential_stub.m \
	 NSURLDownload_stub.m \
	 NSURLError_stub.m \
	 NSURLHandle_stub.m \
	 NSURLProtectionSpace_stub.m \
	 NSURLProtocol_stub.m \
	 NSURLRequest_stub.m \
	 NSURLResponse_stub.m \
	 NSURL_stub.m \
	 NSUndoManager_stub.m \
	 NSUserDefaults_stub.m \
	 NSUtilities_stub.m \
	 NSValueTransformer_stub.m \
	 NSValue_stub.m \
	 NSXMLParser_stub.m \
	 NSZone_stub.m 

libFoundationGlue_la_LDFLAGS = -x objective-c -framework Cocoa 
libFoundationGlue_la_LIBADD = 
libFoundationGlue_ls_LIBS = -framework Cocoa
